Match-id-a9ea38630e762d3331ae9d2b0179cbf24b018ff9

--- a/api/external/api-restore-v2.yaml
+++ b/api/external/api-restore-v2.yaml
@@ -34,7 +34,7 @@ paths:
         '200':
           description: 创建恢复任务响应对象
           schema:
-            $ref: '#/definitions/RestoreResponse'
+            $ref: '#/definitions/UuidObject'
 definitions:
   RestoreRequest:
     description: 恢复请求体
@@ -181,10 +181,10 @@ definitions:
       - rule
       - mode
       - values
-  RestoreResponse:
+  UuidObject:
     properties:
-      jobId:
+      uuid:
         type: string
         description: 恢复job的id
     required:
-      - jobId
+      - uuid
