--- a/api/external/api-storage-backup-plugin.yaml
+++ b/api/external/api-storage-backup-plugin.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: v1
-  title: StorageBackUpPlugin
+  title: 存储备份插件接口
 basePath: /
 tags:
   - name: api-storage-backup-plugin
@@ -52,6 +52,244 @@ paths:
           description: 文件系统详细信息展示
           schema:
             $ref: '#/definitions/FileSystemInfo'
+  '/v1/plugins/storage/nas/filesystems/{mountPointId}/folders':
+    post:
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - api-storage-backup-plugin
+      summary: 创建文件夹
+      description: 创建文件夹
+      operationId: CreateFileSystemFolder
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: mountPointId
+          in: path
+          required: true
+          type: string
+          description: 挂载点
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+        - name: folderName
+          in: query
+          required: true
+          description: 文件夹名
+          type: string
+        - name: parentPath
+          in: query
+          required: true
+          description: 文件夹所在路径
+          type: string
+      responses:
+        '200':
+          description: ''
+          schema:
+            type: string
+  '/v1/plugins/storage/nas/filesystems/{mountPointId}/folders/{folderName}':
+    delete:
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - api-storage-backup-plugin
+      summary: 删除文件夹
+      description: 删除文件夹
+      operationId: DeleteFileSystemFolder
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: mountPointId
+          in: path
+          required: true
+          type: string
+          description: 挂载点
+        - name: folderName
+          in: path
+          required: true
+          type: string
+          description: 文件夹名
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+        - name: currentPath
+          in: query
+          required: true
+          description: 当前文件夹路径夹路径
+          type: string
+      responses:
+        '200':
+          description: ''
+          schema:
+            type: string
+  '/v1/plugins/storage/nas/filesystems/{fileSystemId}/shares':
+    get:
+      tags:
+        - api-storage-backup-plugin
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      summary: 通过文件系统id查询共享信息
+      description: 通过文件系统id查询共享信息
+      operationId: ListShares
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: fileSystemId
+          in: path
+          required: true
+          type: string
+          description: 文件系统id
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+      responses:
+        '200':
+          description: 共享信息集合
+          schema:
+            items:
+              $ref: '#/definitions/ShareResponse'
+            type: array
+  /v1/plugins/storage/nas/filesystems/mount:
+    post:
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - api-storage-backup-plugin
+      summary: 创建挂载
+      description: 创建挂载
+      operationId: CreateMount
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+        - name: location
+          in: query
+          required: true
+          description: LOCAL 本机位置   NEW 新位置
+          type: string
+        - name: CreateMountRequestBody
+          in: body
+          required: true
+          description: 挂载请求体
+          schema:
+            $ref: '#/definitions/CreateMountRequestBody'
+      responses:
+        '200':
+          description: 挂载文件返回体
+          schema:
+            $ref: '#/definitions/MountResponse'
+  '/v1/plugins/storage/nas/filesystems/{mountPointId}/files':
+    get:
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - api-storage-backup-plugin
+      summary: 浏览文件系统中的目录/文件
+      description: 浏览文件系统中的目录/文件
+      operationId: ListRestoreFiles
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: mountPointId
+          in: path
+          required: true
+          type: string
+          description: 挂载点
+        - name: parentPath
+          in: query
+          required: true
+          description: 根路径
+          type: string
+        - name: pageSize
+          in: query
+          required: true
+          description: 分页大小
+          type: string
+        - name: pageNum
+          in: query
+          required: true
+          description: 起始页
+          type: string
+      responses:
+        '200':
+          description: 文件树返回体
+          schema:
+            $ref: '#/definitions/DeeFileSystemResponse'
+  /v1/plugins/storage/nas/filesystems:
+    get:
+      x-impact-subsystem: 不影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      x-sysadmin-role: 'Y'
+      x-dp-admin-role: 'Y'
+      tags:
+        - api-storage-backup-plugin
+      summary: 查询底座文件系统信息
+      description: 查询底座文件系统信息
+      operationId: ListFilesystems
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: pageNo
+          in: query
+          required: true
+          description: 起始页，默认值为0
+          type: integer
+          format: int32
+        - name: pageSize
+          in: query
+          required: true
+          description: 分页大小，默认值为200
+          type: integer
+          format: int32
+        - name: X-Auth-Token
+          in: header
+          required: true
+          description: 访问令牌
+          type: string
+      responses:
+        '200':
+          description: 文件系统响应体
+          schema:
+            $ref: '#/definitions/FileSystemResponseList'
 definitions:
   FileSystemInfo:
     description: 文件系统详细信息查询的返回体。
@@ -134,3 +372,151 @@ definitions:
         type: integer
         format: int32
         description: 权限级别：0-只读，1-读写
+  ShareResponse:
+    description: 查询nas共享信息
+    required:
+      - shareName
+      - shareType
+    properties:
+      shareName:
+        type: string
+        description: 共享名称
+      shareType:
+        type: string
+        description: 共享方式nfs、cifs
+  FileSystemData:
+    description: 文件系统信息
+    properties:
+      path:
+        type: string
+        description: 文件路径
+      modifyTime:
+        type: string
+        description: 修改时间
+      size:
+        type: integer
+        format: int32
+        description: 大小
+      hasChildren:
+        type: boolean
+        description: 是否有子树
+      type:
+        type: string
+        description: 文件类型（文件夹/文件/链接文件
+    required:
+      - path
+      - modifyTime
+      - size
+      - hasChildren
+      - type
+  DeeFileSystemResponse:
+    description: 源端文件树返回信息
+    properties:
+      total:
+        type: string
+        description: 文件信息总数
+      parentPath:
+        type: string
+        description: 根路径
+      items:
+        type: array
+        items:
+          $ref: '#/definitions/FileSystemData'
+        description: 文件系统信息
+      mountPointId:
+        type: string
+        description: 挂载点
+    required:
+      - total
+      - parentPath
+      - items
+      - mountPointId
+  MountResponse:
+    required:
+      - mountPointId
+    properties:
+      mountPointId:
+        type: string
+        description: 挂载点
+  CreateMountRequestBody:
+    description: 挂载文件请求参数
+    properties:
+      filesystemName:
+        type: string
+        description: 文件系统名
+      sharedIp:
+        type: string
+        description: 共享ip地址
+      sharedName:
+        type: string
+        description: 共享名
+      sharedProtocol:
+        type: string
+        description: 共享协议，NFS、CIFS（本机位置不填）
+      nfsAuth:
+        $ref: '#/definitions/NfsAuth'
+      cifsAuth:
+        $ref: '#/definitions/CifsAuth'
+    required:
+      - filesystemName
+      - sharedIp
+      - sharedName
+      - sharedProtocol
+      - nfsAuth
+      - cifsAuth
+  NfsAuth:
+    description: nfs请求体
+    properties:
+      mode:
+        type: string
+        description: 认证模式
+      kerberos:
+        type: string
+        description: kerberos
+    required:
+      - mode
+      - kerberos
+  CifsAuth:
+    description: cifs请求体
+    properties:
+      mode:
+        type: string
+        description: 认证模式
+      domainName:
+        type: string
+        description: 域名
+      username:
+        type: string
+        description: 用户名
+      password:
+        type: string
+        description: 密码
+    required:
+      - mode
+      - domainName
+  FileSystemResponseList:
+    properties:
+      totalCount:
+        type: integer
+        format: int32
+        description: 总记录数
+      records:
+        items:
+          $ref: '#/definitions/FileSystemResponse'
+        description: 文件系统响应体
+        type: array
+    required:
+      - totalCount
+      - records
+  FileSystemResponse:
+    properties:
+      name:
+        type: string
+        description: 文件系统名字
+      id:
+        type: string
+        description: 文件系统id
+    description: 文件系统响应体
+    required:
+      - name
+      - id
