--- a/api/external/api-vmware-res.yaml
+++ b/api/external/api-vmware-res.yaml
@@ -2,9 +2,16 @@ swagger: '2.0'
 info:
   title: 资源管理（vmware）
   version: v1
+tags:
+  - name: vmware
+  - name: virtual-resource
 paths:
   '/v1/compute-resources/clusters/{cluster_uuid}/config':
     get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       produces:
         - application/json
       parameters:
@@ -19,6 +26,7 @@ paths:
           in: header
           name: X-Auth-Token
           required: true
+          type: string
       responses:
         '200':
           description: Successful Response
@@ -38,6 +46,10 @@ paths:
       summary: 查询集群计算资源的配置
   '/v1/compute-resources/{compute_res_uuid}/datastores':
     get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       produces:
         - application/json
       parameters:
@@ -52,6 +64,7 @@ paths:
           in: header
           name: X-Auth-Token
           required: true
+          type: string
       responses:
         '200':
           description: Successful Response
@@ -76,6 +89,10 @@ paths:
       summary: 查询计算资源的数据存储列表
   '/v1/compute-resources/{compute_res_uuid}/networks':
     get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       produces:
         - application/json
       parameters:
@@ -90,6 +107,7 @@ paths:
           in: header
           name: X-Auth-Token
           required: true
+          type: string
       responses:
         '200':
           description: Successful Response
@@ -114,6 +132,10 @@ paths:
       summary: 查询计算资源的网络列表
   '/v1/virtual-machines/{vm_uuid}':
     get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       produces:
         - application/json
       parameters:
@@ -128,6 +150,7 @@ paths:
           in: header
           name: X-Auth-Token
           required: true
+          type: string
       responses:
         '200':
           description: Successful Response
@@ -146,6 +169,10 @@ paths:
       summary: 查询VMware虚拟机的详细信息
   '/v1/virtual-machines/{vm_uuid}/disks':
     get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
       produces:
         - application/json
       parameters:
@@ -160,6 +187,7 @@ paths:
           in: header
           name: X-Auth-Token
           required: true
+          type: string
       responses:
         '200':
           description: Successful Response
@@ -179,6 +207,61 @@ paths:
       description: 根据VMware虚拟机ID查询VMware虚拟机的硬盘列表
       operationId: list_vm_disk_v1_virtual_machines__vm_uuid__disks_get
       summary: 查询VMware虚拟机的硬盘列表
+  /v1/virtual-resource:
+    get:
+      x-impact-subsystem: 影响
+      x-access-port: 25081
+      x-auth-required: 'Y'
+      x-public-api: 'Y'
+      produces:
+        - application/json
+      parameters:
+        - description: 分页页面编码
+          in: query
+          minimum: 0
+          name: page_no
+          required: true
+          type: integer
+        - description: 分页数据条数
+          in: query
+          maximum: 200
+          minimum: 0
+          name: page_size
+          required: true
+          type: integer
+        - collectionFormat: multi
+          description: 排序字段：children
+          in: query
+          items:
+            type: string
+          name: orders
+          required: false
+          type: array
+        - description: 条件参数：
+          in: query
+          name: conditions
+          required: false
+          type: string
+        - description: 访问令牌
+          in: header
+          name: X-Auth-Token
+          required: true
+          type: string
+      responses:
+        '200':
+          description: Successful Response
+          schema:
+            $ref: '#/definitions/BasePage_VirtualResourceSchema_'
+        '404':
+          description: Not Found
+        '422':
+          description: Validation Error
+          schema:
+            $ref: '#/definitions/HTTPValidationError'
+      tags:
+        - virtual-resource
+      operationId: query_resources_v1_virtual_resource_get
+      summary: 查询VMware资源列表
 definitions:
   ClusterConfigSchema:
     properties:
@@ -777,5 +860,36 @@ definitions:
       - uuid
     title: VirtualResourceSchema
     type: object
+  BasePage_VirtualResourceSchema_:
+    properties:
+      items:
+        description: 数据列表
+        items:
+          $ref: '#/definitions/VirtualResourceSchema'
+        title: Items
+        type: array
+      page_no:
+        description: 页面编号
+        title: Page No
+        type: integer
+      page_size:
+        description: 每页数据量
+        title: Page Size
+        type: integer
+      pages:
+        description: 总页数
+        title: Pages
+        type: integer
+      total:
+        description: 总的数据条数
+        title: Total
+        type: integer
+    required:
+      - total
+      - pages
+      - page_size
+      - page_no
+      - items
+    title: 'BasePage[VirtualResourceSchema]'
+    type: object
 x-components: {}
-
