Match-id-ed1d3a9a7c5fa0714420e99a67aa03fe82858783

--- a/api/internal/api-dee-indexer-internal.yaml
+++ b/api/internal/api-dee-indexer-internal.yaml
@@ -493,6 +493,9 @@ definitions:
       resourceId:
         type: string
         description: '${dee.indexer.browse.copyInfo.request.resourceId}'
+      resourceName:
+        type: string
+        description: 副本资源名称，创建索引时必选
       resourceSubType:
         type: string
         description: 副本资源子类型
